# todo_cli

./: .env  .vimspector.json  Cargo.toml  diesel.toml
migrations/2023-05-11-112658_users/: up.sql
migrations/2023-05-12-185542_todos/: up.sql
src/: control.rs  main.rs  models.rs  repl.rs  schema.rs
