[package]
name = "todo_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.0.0", features = ["postgres"] }
dotenvy = "0.15"
rpassword = "7.2.0"
uuid = {version = "1.3.2", features=["serde","v4"]}
